# lolshorts

./: .env.example  .env.production.example  .gitignore  AUTO_EDIT_SPEC.md  BUILD_GUIDE.md  CHANGELOG.md  CLEANUP_REPORT.md  CLIP_METADATA_DESIGN.md  DEPLOYMENT.md  DEPLOYMENT_GUIDE.md  DEVELOPMENT_PLAN.md  EDITOR_INTEGRATION_WORKFLOW.md  IMPLEMENTATION_ANALYSIS.md  IMPLEMENTATION_ROADMAP.md  IMPLEMENTATION_WORKFLOW.md  LEGACY_ARCHIVE.md  LICENSE  PHASE_0_COMPLETE.md  PRIVACY_POLICY.md  PRODUCTION_CHECKLIST.md  PRODUCTION_CRITICAL_PATH.md  PRODUCTION_DEPLOYMENT.md  PRODUCTION_IMPLEMENTATION_STATUS.md  PRODUCTION_READINESS_ANALYSIS.md  PRODUCTION_READINESS_REPORT.md  PRODUCTION_READY.md  PRODUCTION_ROADMAP.md  PRODUCTION_STATUS.md  README.md  RECORDING_SETTINGS_DESIGN.md  RELEASE_NOTES_v1.0.0.md  RIOT_COMPLIANCE.md  TERMS_OF_SERVICE.md  TESTING_STATUS.md  WAVE_1_COMPLETE.md  WAVE_1_PROGRESS.md  YOUTUBE_UPLOAD_SPEC.md  claude.md  eslint.config.js  index.html  (+7 more)
.cargo/: config.toml
.claude/: settings.local.json
.github/workflows/: ci.yml  release.yml
.serena/: project.yml
.serena/memories/: code_style.md  completion_checklist.md  project_overview.md  project_structure.md  suggested_commands.md  tech_stack.md
docs/: ARCHIVED_VideoEncoder_Research.md  AUDIO_MIXING.md  AUTO_CAPTURE_SYSTEM.md  AUTO_EDIT_GUIDE.md  CANVAS_TUTORIAL.md  FFMPEG_SETUP.md  LOCAL_STORAGE.md  PERFORMANCE_VALIDATION.md  PRODUCTION_STATUS.md  RECORDING_SOLUTION_COMPARISON.md  TROUBLESHOOTING.md
src/: App.tsx  i18n.ts
src-tauri/: .taurignore  Cargo.toml  build.rs  clippy.toml  lolshorts.db-shm  lolshorts.db-wal  tauri.conf.json  test_output.txt
src-tauri/benches/: auto_edit_benchmark.rs
src-tauri/build_scripts/: README.md  prepare_ffmpeg.ps1  verify_environment.ps1
src-tauri/capabilities/: default.json
src-tauri/migrations/: 20250101000000_initial_schema.sql
src-tauri/src/: hotkey.rs  lib.rs  main.rs
src-tauri/src/auth/: commands.rs  middleware.rs  mod.rs
src-tauri/src/database/: migrations.rs  mod.rs  models.rs
src-tauri/src/feature_gate/: mod.rs
src-tauri/src/lcu/: commands.rs  mod.rs
src-tauri/src/payments/: commands.rs  mod.rs  subscription_commands.rs  toss.rs  webhook.rs
src-tauri/src/recording/: audio.rs  auto_clip_manager.rs  commands.rs  live_client.rs  mod.rs  windows_backend.rs
src-tauri/src/settings/: commands.rs  mod.rs  models.rs  storage.rs
src-tauri/src/storage/: commands.rs  mod.rs  models.rs  models_v2.rs
src-tauri/src/supabase/: client.rs  mod.rs
src-tauri/src/utils/: circuit_breaker.rs  cleanup.rs  commands.rs  error.rs  logging.rs  metrics.rs  mod.rs  retry.rs  security.rs
src-tauri/src/video/: auto_composer.rs  commands.rs  mod.rs  performance.rs  processor.rs  thumbnail.rs
src-tauri/src/youtube/: callback_server.rs  commands.rs  mod.rs  models.rs  oauth.rs  upload.rs
src-tauri/tests/: auto_edit_integration.rs  payment_integration.rs  recording_integration.rs  youtube_integration.rs
src-tauri/tests/integration/: auth_tests.rs  mod.rs  recording_tests.rs  video_tests.rs
src/components/: ClipLibrary.tsx  PaymentModal.test.tsx  PaymentModal.tsx  RecordingControls.test.tsx  RecordingControls.tsx  (+4 more)
supabase/: README.md  schema.sql
(+87 files in other folders)
