[package]
name = "lolshorts"
version = "1.0.0"
description = "League of Legends Auto-Recording and Editing Desktop App - Production Ready"
authors = ["LoLShorts Team"]
license = "MIT"
repository = "https://github.com/lolshorts/lolshorts"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
# Tauri Core
tauri = { version = "2.0", features = [] }
tauri-plugin-shell = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Async Runtime
tokio = { version = "1.41", features = ["full"] }

# HTTP Client & WebSocket
reqwest = { version = "0.12", features = ["json"] }
tokio-tungstenite = "0.24"

# Error Handling
thiserror = "2.0"
anyhow = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-appender = "0.2"

# Date/Time
chrono = { version = "0.4", features = ["serde"] }

# Utilities
once_cell = "1.20"
dirs = "5.0"
uuid = { version = "1.11", features = ["v4"] }
dotenvy = "0.15"
base64 = "0.22"
urlencoding = "2.1"
rand = "0.8"

# Video Recording Strategy:
# - Windows: FFmpeg CLI with gdigrab (screen capture) + H.265 hardware encoding (NVENC/QSV/AMF)
# - Segment-based circular buffer (6 x 10s = 60s replay window)
# - Process-based approach for stability, simplicity, and production readiness
# - FFmpeg binary bundled with application installer

# Alternative: Pure Rust video encoding (optional)
rav1e = { version = "0.7", optional = true }
mp4 = { version = "0.14", optional = true }

# Input monitoring for hotkeys
rdev = "0.5"

# Image processing
image = "0.25"
imageproc = "0.24"

# Screen capture
scrap = "0.5"

# Performance optimization
rayon = "1.10"
parking_lot = "0.12"
ringbuf = "0.4"
bytes = "1"

# System info
sysinfo = "0.31"
num_cpus = "1.16"
tokio-util = "0.7.17"

# Windows-specific
[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_System_Threading",
    "Win32_System_Com",
    "Win32_System_LibraryLoader",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_Storage_FileSystem",
    "Win32_Graphics_Gdi",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Media_Audio",
] }

# macOS-specific
[target.'cfg(target_os = "macos")'.dependencies]
core-graphics = "0.23"
core-foundation = "0.9"

# Linux-specific
[target.'cfg(target_os = "linux")'.dependencies]
x11rb = "0.13"
wayland-client = { version = "0.31", optional = true }

[dev-dependencies]
tempfile = "3.14"
wait-timeout = "0.2"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
native-encoder = ["rav1e", "mp4"]
wayland-support = ["wayland-client"]


# Production Build Optimizations
[profile.release]
opt-level = 3              # Maximum optimization
lto = "fat"                # Full Link-Time Optimization
codegen-units = 1          # Better optimization (slower compile)
strip = true               # Strip symbols for smaller binary
panic = "abort"            # Smaller binary, faster panics

[profile.release.package."*"]
opt-level = 3              # Optimize all dependencies
